mention the job whoops

--- a/html/2024.html
+++ b/html/2024.html
@@ -211,7 +211,7 @@
       The most notable thing that happened this year I think was my very sudden <a href="/html/gender.html">gender crisis</a> at the end of November, where I discovered so much about myself in such a short amount of time. I love gender so much.
     </article>
     <article who="nahua" emotion="neutral">
-      And that brings us to about December! I made my 1000th commit on the spax.zone repository and started commissioning more experimental art and making my own fursona (yea, Nahua is NOT my fursona fun fact). I've also been dipping my toes into Balatro modding.
+      And that brings us to about December! I made my 1000th commit on the spax.zone repository and started commissioning more experimental art and making my own fursona (yea, Nahua is NOT my fursona fun fact). I've also been dipping my toes into Balatro modding, and I got a local job that pays pretty well but is very mentally/physically/socially taxing haha.
     </article>
     <article who="nahua" emotion="dizzy">
       Anyways, christ what a stream-of-thought blogpost.
