fucking mention happy new year oh my god

--- a/html/2024.html
+++ b/html/2024.html
@@ -218,6 +218,8 @@
     </article>
     <article who="nahua" emotion="bashful">
       Thank you so much for reading it! I'll probably go back and edit it so it's more concise in the future but I really want to get this out before January 1st 2025 in my timezone.
+      <br>
+      Happy new year!!
     </article>
     <article who="nahua" emotion="neutral">
       <a href="/">Here's a link back to the main page.</a>
