ref sheet update and twemoji added as font

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -61,16 +61,20 @@
         <div id="ayo" title="ayo what you doin over there"></div>
       </div>
       Artist: 1LikeBananas<br>
-      Alt text: <a href="https://goatygoats.com/">Goaty Goats</a><br>
-      <a href="https://cdn.spax.zone/nahua-ref-sheet.png">High Res Version</a>
+      Alt text: <a href="https://goatygoats.com/" target="_blank">Goaty Goats</a><br>
+      <a href="https://cdn.spax.zone/nahua-ref-sheet.png" target="_blank">High Res Version</a>
     </article>
     <article>
       Extra clarifications:<br>
-      1. She has four fingers, not three.<br>
-      2. Yes, her gills (or <a href="https://en.wikipedia.org/wiki/External_gills">rami</a>) are stylized like that.<br>
-      3. Lore reasons for the minor transformative powers will be explained when I'm bothered to write it.<br>
-      4. Her outfit doesn't need to be the one in the ref! She does tend to prefer more open/breathable clothing though.<br>
-      5. She goes for a tomboy-ish look.<br>
+      - She has four fingers, not three or five.<br>
+      - Yes, her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>) are stylized like that.<br>
+      - Lore reasons for the minor transformative powers will be explained when I'm bothered to write it.<br>
+      - Her outfit doesn't need to be the one in the ref! (In fact, I encourage you to draw her in something else 😭). She does tend to prefer more open/breathable clothing though.<br>
+      - She goes for a tomboy-ish look.<br>
+      - Ignore that textbox clarifying she doesn't have breasts. She can have any size up to B-cups.<br>
+      - Ignore that textbox about the headphones. They're optional rather than encouraged now.<br>
+      - She has sharp teeth! Refer to <a href="https://bsky.app/profile/nikao56.bsky.social/post/3lclevodrvk2m" target="_blank">this piece of art</a>.<br>
+      - Her legs are <a href="https://en.wikipedia.org/wiki/Digitigrade" target="_blank">digitigrade</a> (high ankle, not flat-footed which is <a href="https://en.wikipedia.org/wiki/Plantigrade" target="_blank">plantigrade</a>).<br>
       <br>
       If you need any other clarifications, feel free to reach out and ask me on discord!<br>
       <br>
@@ -94,7 +98,7 @@
       </div>
     </article>
     <article class="short">
-      Last updated: November 16th, 2024<br>
+      Last updated: January 10th, 2025<br>
     </article>
     <article class="short">
       (And <a href="./index.html">click here</a> to see the main page!)
