--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Nahua Ref Sheet</title>
-    <meta property="og:image" content="https://cdn.spax.zone/nahua-ref-sheet.png" type="image/png">
-    <meta property="twitter:card" content="summary_large_image">
+    <title>Nahua's Ref Sheet</title>
+    <meta name="description" content="(Please visit the webpage to view more details!)" />
+    <meta property="og:image" content="https://cdn.spax.zone/nahua-ref-sheet.png" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <style>
       #colors {
