coming to terms with nahua being my fursona

--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -23,8 +23,8 @@
     </article>
     -->
     <article>
-      <a href="./nahua-ref-sheet.html">Nahua Ref Sheet</a><br>
-      The ref sheet of my OC, Nahua!
+      <a href="./nahua-ref-sheet.html">Nahua's Ref Sheet</a><br>
+      The ref sheet of my fursona, Nahua!
     </article>
     <article>
       <a href="./gender.html">My Gender</a><br>
