--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -70,7 +70,7 @@
       - She has four fingers, not three or five.<br>
       - Yes, her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>) are stylized like that.<br>
       - Lore reasons for the minor transformative powers will be explained when I'm bothered to write it.<br>
-      - Her outfit doesn't need to be the one in the ref! (In fact, I encourage you to draw her in something else 😭). She does tend to prefer more open/breathable clothing though.<br>
+      - Her outfit doesn't need to be the one in the ref! (In fact, I encourage you to draw her in something else :sob:). She does tend to prefer more open/breathable clothing though.<br>
       - She goes for a tomboy-ish look.<br>
       - Ignore that textbox clarifying she doesn't have breasts. She can have any size up to B-cups.<br>
       - Ignore that textbox about the headphones. They're optional rather than encouraged now.<br>
