better ref sheet everything lmao

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Nahua's Ref Sheet</title>
-    <meta name="description" content="(Please visit the webpage to view more details!)" />
+    <meta name="description" content="(Please visit the webpage to view more design details!)" />
     <meta property="og:image" content="https://cdn.spax.zone/nahua-ref-sheet.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
@@ -26,7 +26,7 @@
         cursor: pointer;
       }
       #ref {
-        width: 75%;
+        width: 50%;
         max-width: revert;
       }
       #ref img {
@@ -37,17 +37,22 @@
       }
       #ayo {
         position: absolute;
-        width: 8%;
-        height: 13%;
-        left: 27%;
-        bottom: 36%;
+        width: 9%;
+        height: 10%;
+        left: 13%;
+        bottom: 35%;
         cursor: not-allowed;
+        /* border: dashed 2px red; */
       }
       #clarifications-header {
         display: inline-block;
         margin-bottom: 10px;
       }
-      @media only screen and (max-width: 1200px) {
+      #clarifications br {
+        display: block;
+        margin: 5px 0;
+      }
+      @media only screen and (max-width: 1300px) {
         #clarifications-header {
           display: none;
         }
@@ -56,30 +61,40 @@
   </head>
   <body>
     <article class="art" id="ref">
-      <span id="clarifications-header">!! Scroll down for clarifications !!</span>
+      <span id="clarifications-header">!! Scroll down for design notes / clarifications !!</span>
       <div id="refcontainer">
-        <img src="/images/art/nahua-bananas-refsheet.png" alt="Reference sheet for Nahua (Na-hoo-wa), a light blue axolotl with dark blue, yellow, and orange accents. She's shown from the front (both clothed and nude) and back; she looks cheery in the clothed picture and flustered in the nude one, which is censored with an eye-popping smiley. She's wearing shorts, kneesocks, a tanktop with an up arrow on it, and headphones. She is 5 feet 3 inches (160 centimeters) tall, 19 years old, and uses she/they pronouns. Design notes: Always wears headphones or ear-coverings (she looks weird without them); doesn't wear furs (they stick uncomfortably to the mucus on her skin); yellow eyelash-things are optional, but iconic; as an amphibian, she doesn't have breasts; hair is made out of kelp or something, IDK, go wild; has minor transformative powers (lore).">
+        <img src="/images/art/nahua-bananas-refsheet.png" alt="Reference sheet for Nahua (Na-hoo-wa), a light blue axolotl with dark blue, yellow, and orange accents. She's shown from the front (both clothed and nude) and back; she looks cheery in the clothed picture and flustered in the nude one, which is censored with an eye-popping emoji graphic. She's wearing shorts, kneesocks, a tanktop with an up arrow on it, and headphones. She is 5 feet 3 inches (160 centimeters) tall, 19 years old, and uses she/they pronouns.">
         <div id="ayo" title="ayo what you doin over there"></div>
       </div>
       Artist: 1LikeBananas<br>
       Alt text: <a href="https://goatygoats.com/" target="_blank">Goaty Goats</a><br>
       <a href="https://cdn.spax.zone/nahua-ref-sheet.png" target="_blank">High Res Version</a>
     </article>
-    <article>
-      Extra clarifications:<br>
-      - She has four fingers, not three or five.<br>
-      - Yes, her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>) are stylized like that.<br>
-      - Lore reasons for the minor transformative powers will be explained when I'm bothered to write it.<br>
-      - Her outfit doesn't need to be the one in the ref! (In fact, I encourage you to draw her in something else :sob:). She does tend to prefer more open/breathable clothing though.<br>
-      - She goes for a tomboy-ish look.<br>
-      - Ignore that textbox clarifying she doesn't have breasts. She can have any size up to B-cups.<br>
-      - Ignore that textbox about the headphones. They're optional rather than encouraged now.<br>
+    <article id="clarifications">
+      Design notes and clarifications:<br>
+      - She has four fingers (as opposed to three or five).<br>
+      - Her hair is very kelp-like in texture, and the light blue parts of it are phosphorescent.<br>
+      - Her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>) are indeed stylized like that.<br>
+      - Note the little yellow things next to her eyes. They're little flairs that come off of them rather than actually being on her skin, since it's a bit ambiguous in the ref. It's also worth noting that they're optional if you can't seem to get them right.<br>
+      - She has minor transformative powers, lore reasons for this will be explained soon-ish.<br>
+      - Her outfit doesn't need to be the one in the ref! (In fact, I encourage you to draw her in something else :sob:). She does tend to prefer more open/breathable clothing though. She goes for a tomboy-ish look.<br>
+      - Her breasts can be any size up to B-cups (A-cups are usually fine).<br>
+      - The headphones are optional rather than encouraged. She has no visible ears.<br>
       - She has sharp teeth! Refer to <a href="https://bsky.app/profile/nikao56.bsky.social/post/3lclevodrvk2m" target="_blank">this piece of art</a>.<br>
       - Her legs are <a href="https://en.wikipedia.org/wiki/Digitigrade" target="_blank">digitigrade</a> (high ankle, not flat-footed which is <a href="https://en.wikipedia.org/wiki/Plantigrade" target="_blank">plantigrade</a>).<br>
+      - Some words I would use to describe her personality: outgoing, smug, playful, naïve, flirtatious(?), and goofy.<br>
+      <!--Old design notes from the slightly older ref:
+        - Always wears headphones or ear-coverings (she looks weird without them).
+        - Doesn’t wear furs (they stick uncomfortably to the mucus on her skin).
+        - Yellow eyelash-things are optional, but iconic.
+        - As an amphibian, she doesn’t have breasts.
+        - Hair is made out of kelp or something, idk. Go wild.
+        - Has minor transformative powers (lore).
+      -->
       <br>
       If you need any other clarifications, feel free to reach out and ask me on discord!<br>
       <br>
-      Oh, and you don't need my permission to draw her.
+      Oh, and you don't need my permission to draw her, but I do ask you to 1) tag my relevant social if you post it somewhere, and 2) not draw nsfw of her unless explicitly given permission from me.
     </article>
     <article>
       If you got javascript enabled<noscript> (you don't)</noscript>, you can copy the hex colors by clicking on its respective square:<br>
