--- a/html/gender.html
+++ b/html/gender.html
@@ -115,7 +115,7 @@
     I identify as bigender (having two genders): cis male irl, and non-binary online.
   </article>
   <article who="nahua" emotion="neutral" id="pronouns">
-    I go by <em hover="he/him or they/them">he/they</em> for both of them, but if I know you well, you can optionally use <em>she/her</em> for me online.<br>
+    I go by <em hover="they/them (preferred) or he/him">they/he</em> for both of them, but if I know you well, you can optionally use <em>she/her</em> for me online.<br>
     And I don't believe I'll be identifying as trans.
   </article>
   <article who="nahua" emotion="bashful">
