--- a/html/gender.html
+++ b/html/gender.html
@@ -115,8 +115,13 @@
     I identify as bigender (having two genders): cis male irl, and non-binary online.
   </article>
   <article who="nahua" emotion="neutral" id="pronouns">
-    I go by <em hover="they/them (preferred) or he/him">they/he</em> for both of them, but if I know you well, you can optionally use <em>she/her</em> for me online.<br>
-    And I don't believe I'll be identifying as trans.
+    I go by <em hover="he/him or they/them">he/they</em> irl and <em>they/them</em> online, but if I know you well, you can optionally use <em>she/her</em> for me online.<br>
+  </article>
+  <article who="nahua" emotion="look">
+    (But don't worry if you get them wrong I'm pretty chill with pronouns)
+  </article>
+  <article who="nahua" emotion="neutral">
+    And I'll be identifying as gender non-conforming (gnc), rather than trans.
   </article>
   <article who="nahua" emotion="bashful">
     Thank you so much for reading! I hope sharing my journey can help others figure out theirs as well!
