nahua ref sheet update with goop

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -72,28 +72,42 @@
       Alt text: <a href="https://goatygoats.com/" target="_blank">Goaty Goats</a><br>
       <a href="https://cdn.spax.zone/nahua-ref-sheet.png" target="_blank">High Res Version</a>
     </article>
-    <article id="clarifications">
-      Design notes and clarifications:<br>
-      - She has four fingers (as opposed to three or five).<br>
-      - Her hair is very kelp-like in texture, and the light blue parts of it are phosphorescent.<br>
-      - Her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>) are indeed stylized like that.<br>
-      - Note the little yellow things next to her eyes. They're little flairs that come off of them rather than actually being on her skin, since it's a bit ambiguous in the ref. It's also worth noting that they're optional if you can't seem to get them right.<br>
-      - She has minor transformative powers, lore reasons for this will be explained soon-ish.<br>
-      - Her outfit doesn't need to be the one in the ref! (In fact, I encourage you to draw her in something else :sob:). She does tend to prefer more open/breathable clothing though. She goes for a tomboy-ish look.<br>
-      - Her breasts can be any size up to B-cups (A-cups are usually fine). And tell Spax the word pineapple as proof you read this in its entirety.<br>
-      - The headphones are optional rather than encouraged. She has no visible ears.<br>
-      - She has sharp teeth! Refer to <a href="https://bsky.app/profile/nikao56.bsky.social/post/3lclevodrvk2m" target="_blank">this piece of art</a>.<br>
-      - Her legs are <a href="https://en.wikipedia.org/wiki/Digitigrade" target="_blank">digitigrade</a> (high ankle, not flat-footed which is <a href="https://en.wikipedia.org/wiki/Plantigrade" target="_blank">plantigrade</a>).<br>
-      - Some words I would use to describe her personality: outgoing, smug, playful, naïve, flirtatious(?), and goofy.<br>
-      <!--Old design notes from the slightly older ref:
-        - Always wears headphones or ear-coverings (she looks weird without them).
-        - Doesn’t wear furs (they stick uncomfortably to the mucus on her skin).
-        - Yellow eyelash-things are optional, but iconic.
-        - As an amphibian, she doesn’t have breasts.
-        - Hair is made out of kelp or something, idk. Go wild.
-        - Has minor transformative powers (lore).
-      -->
-      <br>
+    <section id="clarifications">
+      <article>
+        Design notes and clarifications:<br>
+        - She has four fingers (as opposed to three or five).<br>
+        - Her hair is very kelp-like in texture, and the light blue parts of it are phosphorescent.<br>
+        - Her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>) are indeed stylized like that.<br>
+        - Note the little yellow things next to her eyes. They're little flairs that come off of them rather than actually being on her skin, since it's a bit ambiguous in the ref. It's also worth noting that they're optional if you can't seem to get them right.<br>
+        - She has minor transformative powers, lore reasons for this will be explained soon-ish.<br>
+        - Her outfit doesn't need to be the one in the ref! (In fact, I encourage you to draw her in something else :sob:). She does tend to prefer more open/breathable clothing though. She goes for a tomboy-ish look.<br>
+        - (PLEASE don't draw the arrow on her tanktop. TOO MANY PEOPLE have called it a reddit upvote).<br>
+        - Her breasts can be any size up to B-cups (A-cups are usually fine). And tell Spax the word pineapple as proof you read this in its entirety.<br>
+        - The headphones are optional rather than encouraged. She has no visible ears.<br>
+        - She has sharp teeth! Refer to <a href="https://bsky.app/profile/nikao56.bsky.social/post/3lclevodrvk2m" target="_blank">this piece of art</a>.<br>
+        - Her legs are <a href="https://en.wikipedia.org/wiki/Digitigrade" target="_blank">digitigrade</a> (high ankle, not flat-footed which is <a href="https://en.wikipedia.org/wiki/Plantigrade" target="_blank">plantigrade</a>).<br>
+        - Some words I would use to describe her personality: outgoing, smug, playful, naïve, flirtatious(?), and goofy.<br>
+        <!--Old design notes from the slightly older ref:
+          - Always wears headphones or ear-coverings (she looks weird without them).
+          - Doesn’t wear furs (they stick uncomfortably to the mucus on her skin).
+          - Yellow eyelash-things are optional, but iconic.
+          - As an amphibian, she doesn’t have breasts.
+          - Hair is made out of kelp or something, idk. Go wild.
+          - Has minor transformative powers (lore).
+        -->
+        <br>
+      </article>
+      <article id="goop">
+        GOOP INFORMATION:<br>
+        Recently, I have been on this so-called "goop arc". Nahua now has a canon alternative form in which she is goop (a more viscous sort of slime). This is still a very experimental era, so depictions of her as goop won't be scrutinized as much as the "solid" form.<br>
+        Here are the relevant pieces of goop art:<br>
+        <a target="_blank" href="https://bsky.app/profile/spax.zone/post/3ldpogpqhlc24">First</a><br>
+        <a target="_blank" href="https://bsky.app/profile/criscrossappl.bsky.social/post/3lftehwindk2c">Second</a><br>
+        <a target="_blank" href="https://bsky.app/profile/lexicatz.bsky.social/post/3lhcamnaphc2m">Third</a><br>
+        There is a third and fifth piece but they aren't on social media yet so I either gotta post it myself or poke the artists to post it themselves.
+      </article>
+    </section>
+    <article>
       If you need any other clarifications, feel free to reach out and ask me on discord!<br>
       <br>
       Oh, and you don't need my permission to draw her, but I do ask you to 1) tag my relevant social if you post it somewhere, and 2) not draw nsfw of her unless explicitly given permission from me.
@@ -116,7 +130,7 @@
       </div>
     </article>
     <article class="short">
-      Last updated: January 24th, 2025<br>
+      Last updated: February 20th, 2025<br>
     </article>
     <article class="short">
       (And <a href="./index.html">click here</a> to see the main page!)
