new face sprites !

--- a/html/allcustomfaces.html
+++ b/html/allcustomfaces.html
@@ -5,6 +5,15 @@
     <meta name="description" content="A collection of all of the custom DEP sprites supported on this website.">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <style>
+      details[name="spaxshow"] {
+        transition: opacity 0.15s linear;
+      }
+      details[name="spaxshow"]:not([open]) {
+        opacity: 0;
+      }
+      details[name="spaxshow"]:hover {
+        opacity: 1;
+      }
       details[name="spaxshow"]:not([open]) ~ article[who="spax"] {
         display: none;
       }
@@ -16,6 +25,9 @@
     </article>
     <article who="nahua" emotion="bashful">
       Nahua<br>Bashful
+    </article>
+    <article who="nahua" emotion="blushylook">
+      Nahua<br>Blushy Look
     </article>
     <article who="nahua" emotion="confused">
       Nahua<br>Confused
@@ -38,6 +50,9 @@
     <article who="nahua" emotion="look">
       Nahua<br>Look
     </article>
+    <article who="nahua" emotion="lookdown">
+      Nahua<br>Look Down
+    </article>
     <article who="nahua" emotion="nervous">
       Nahua<br>Nervous
     </article>
@@ -56,8 +71,17 @@
     <article who="nahua" emotion="shocked">
       Nahua<br>Shocked
     </article>
+    <article who="nahua" emotion="sigh">
+      Nahua<br>Sigh
+    </article>
     <article who="nahua" emotion="sleepy">
       Nahua<br>Sleepy
+    </article>
+    <article who="nahua" emotion="smug">
+      Nahua<br>Smug
+    </article>
+    <article who="nahua" emotion="smugevil">
+      Nahua<br>Smug Evil
     </article>
     <article who="nahua" emotion="sus">
       Nahua<br>Sus
