--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -61,10 +61,12 @@
       All Dweller's Empty Path dialogue from the game! Duplicates are removed.<br>
       Spoilers ahead! Please <a href="https://dep.spax.zone/">play the game first</a>.
     </article>
+    <!-- forgot i deleted this one. will be back up later once i decide to automate it
     <article>
       <a href="./alldepfaces.html">All DEP Character Faces</a><br>
       All Dweller's Empty Path faces that are supported on this site! Excluding custom ones.
     </article>
+    -->
     <article>
       <a href="./allcustomfaces.html">All Custom DEP Character Faces</a><br>
       All currently supported custom portraits in the style of DEP. All Nahua portraits were done by Bananas! The old legacy Spax ones were done by me.
