--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -101,10 +101,16 @@
         GOOP INFORMATION:<br>
         Recently, I have been on this so-called "goop arc". Nahua now has a canon alternative form in which she is goop (a more viscous sort of slime). This is still a very experimental era, so depictions of her as goop won't be scrutinized as much as the "solid" form.<br>
         Here are the relevant pieces of goop art:<br>
-        <a target="_blank" href="https://bsky.app/profile/spax.zone/post/3ldpogpqhlc24">First</a><br>
-        <a target="_blank" href="https://bsky.app/profile/criscrossappl.bsky.social/post/3lftehwindk2c">Second</a><br>
-        <a target="_blank" href="https://bsky.app/profile/lexicatz.bsky.social/post/3lhcamnaphc2m">Third</a><br>
-        There is a third and fifth piece but they aren't on social media yet so I either gotta post it myself or poke the artists to post it themselves.
+        <a target="_blank" href="https://bsky.app/profile/did:plc:erljg5y74ltqn5pyc7y33n6w/post/3ldpogpqhlc24">First</a><br>
+        <a target="_blank" href="https://bsky.app/profile/did:plc:6qbvevxtcgu4t6vw6xkpajdq/post/3lftehwindk2c">Second</a><br>
+        <a target="_blank" href="https://cdn.spax.zone/Nahua_Kylefur_Goop.png">Third</a> (<a target="_blank" href="https://toyhou.se/KyleFur">Artist</a>)<br>
+        <a target="_blank" href="https://cdn.spax.zone/Nahua_Bananas_Slime.png">Fourth</a><br>
+        <a target="_blank" href="https://cdn.spax.zone/Nahua_Jack_Goop.png">Fifth</a> (<a target="_blank" href="https://x.com/jackpumpoen" title="they better move to bluesky soon">Artist</a>)<br>
+        <a target="_blank" href="https://bsky.app/profile/did:plc:5z7bj2xphthaldjiuv36gttr/post/3lhcamnaphc2m">Sixth</a><br>
+        <a target="_blank" href="https://vgen.co/Bumbabeezle/portfolio/showcase/spax-s-simple-animated-icon/4913917c-f43d-478d-96cd-6ef6ce75db86">Seventh</a><br>
+        <a target="_blank" href="https://vgen.co/graylure/portfolio/showcase/spax-s-skeb-game-boy-inspired-chibi-/d59d7bc2-743b-4cd1-8ed3-110bffca7763">Eighth</a><br>
+        <a target="_blank" href="https://bsky.app/profile/did:plc:qudfhdxzcnp4y34ezalz5iep/post/3ljy5prtrzk25">Ninth</a><br>
+        Note: some of these haven't been posted publicly by the artists, and are direct links on my CDN. I have credited the artist next to the links if they have a social.
       </article>
     </section>
     <article>
