update jack's credit

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -105,7 +105,7 @@
         <a target="_blank" href="https://bsky.app/profile/did:plc:6qbvevxtcgu4t6vw6xkpajdq/post/3lftehwindk2c">Second</a><br>
         <a target="_blank" href="https://cdn.spax.zone/Nahua_Kylefur_Goop.png">Third</a> (<a target="_blank" href="https://toyhou.se/KyleFur">Artist</a>)<br>
         <a target="_blank" href="https://cdn.spax.zone/Nahua_Bananas_Slime.png">Fourth</a><br>
-        <a target="_blank" href="https://cdn.spax.zone/Nahua_Jack_Goop.png">Fifth</a> (<a target="_blank" href="https://x.com/jackpumpoen" title="they better move to bluesky soon">Artist</a>)<br>
+        <a target="_blank" href="https://cdn.spax.zone/Nahua_Jack_Goop.png">Fifth</a> (<a target="_blank" href="https://pumpoen.tumblr.com/">Artist</a>)<br>
         <a target="_blank" href="https://bsky.app/profile/did:plc:5z7bj2xphthaldjiuv36gttr/post/3lhcamnaphc2m">Sixth</a><br>
         <a target="_blank" href="https://vgen.co/Bumbabeezle/portfolio/showcase/spax-s-simple-animated-icon/4913917c-f43d-478d-96cd-6ef6ce75db86">Seventh</a><br>
         <a target="_blank" href="https://vgen.co/graylure/portfolio/showcase/spax-s-skeb-game-boy-inspired-chibi-/d59d7bc2-743b-4cd1-8ed3-110bffca7763">Eighth</a><br>
