--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,20 @@
     #eggbug-eggring table {
       width: 100%;
     }
+    #spaxjohn {
+      max-width: 722px;
+      min-height: 84px;
+      max-height: 84px;
+      padding: 12px 0 0 84px;
+      padding-left: 84px;
+      padding-top: 12px;
+      padding-right: 0;
+      &::before {
+        left: 3px;
+        top:  3px;
+        height: 72px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -174,6 +188,19 @@
   </article>
   <article who="nahua" emotion="look">
     (Also don't ask how I pronounced an image and HTML)
+  </article>
+  <article who="nahua" emotion="neutral">
+    And here's a word from a johnvertisement:
+  </article>
+  <iframe src="https://john.citrons.xyz/embed?ref=spax.zone" style="max-width:728px;width:100%;height:90px;border:none;"></iframe>
+  <!--gonna put my johnvertisement here:
+  <article who="nahua" emotion="smug" id="spaxjohn">
+    <span class="r1">&lt;<span style="display:inline-block;transform:translateY(1.25px) scaleX(200%);margin-left:-3px;margin-right:10px;">-</span>THIS MOTHERSLUDGER</span> was turned into <span class="g3" style="display: inline-block; font-size: 30px; transform: translateY(20%); text-shadow: rgb(var(--g3v), 1) 0 1px 1px, rgb(var(--g3v), 0.75) 0 3px 2px, rgb(var(--g3v), 0.5) 0 7.5px 3px;">GOOP</span> <span style="font-size: 16px;">(find out how at <a href="https://spax.zone/">spax.zone</a>)</span>
+    <img src="https://cdn.spax.zone/nahua_accentaigu_slime.png" style="display: none; position: absolute; height: 90%; top: 5%; right: 1%; aspect-ratio: 2400 / 2600; image-rendering: smooth;">
+  </article>
+  -->
+  <article who="nahua" emotion="happy">
+    Now with all of that fun HTML stuff out of the way, let's talk about this website!
   </article>
   <article who="nahua" emotion="expressionless">
     This index page will become less linear as soon as I decide to
