another index update (added sillypost)

--- a/html/index.html
+++ b/html/index.html
@@ -271,6 +271,12 @@
   <article who="nahua" emotion="pensive">
     Eggbug forever.
   </article>
+  <article who="nahua" emotion="joyful" id="sillypost">
+    The newest (and arguably silliest) one I have now is a sillypost profile!
+  </article>
+  <article who="nahua" emotion="look">
+    My account is <a href="https://sillypost.net/user/spax">@spax</a>, which you'll only be able to view if you have an account.
+  </article>
   <article who="nahua" emotion="happy" id="email">
     I also have an email! imstuff at spax dot zone.
   </article>
@@ -295,7 +301,7 @@
     Stay tuned for updates!
   </article>
   <article class="short">
-    (This page was last updated on December 6th, 2024)<br><br>
+    (This page was last updated on May 14th, 2025)<br><br>
     ((This section will be updated automatically at some point))<br><br>
     (((Also don't click <a href="/nsfw" target="_blank">here</a>)))
   </article>
