the actual refactor of horse-rotate.js

--- a/tests/horse/index.html
+++ b/tests/horse/index.html
@@ -31,7 +31,7 @@
   </noscript>
   <h1>The Horse Button™</h1>
   <p>Please click <span class="glow">The Horse Button™</span> at your own risk.</p>
-  <button id="horsebutton" title="The Horse Button™"><div>🐴</div></button>
+  <button id="horsebutton"><div>🐴</div></button>
   <h2 id="visiting">About to visit <code>horse</code>...</h2>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
 <script src="./script.js"></script>
