fix literally one thing for the gender blogpost

--- a/html/gender.html
+++ b/html/gender.html
@@ -66,7 +66,7 @@
     Now fast-forward to the year 2024, four years with unrestricted internet. I've finally turned 18, and was able to unlock a whole new section of the internet.
   </article>
   <article who="nahua" emotion="disappointed">
-    Being a minor on the internet is not the most fun experience. There's always a risk of predators, you can't use transfer money very easily, and half of the people on social media don't even want to interact with you because they don't like the way kids act. Not to mention you aren't really allowed to explore your sexuality until you've reached "that age". All discussion of this with responsible adults online is considered taboo (and for good reason!, but it's still unfortunate as I had little-to-no resources to help guide me through my feelings).
+    Being a minor on the internet is not the most fun experience. There's always a risk of predators, you can't use or transfer money very easily, and half of the people on social media don't even want to interact with you because they don't like the way kids act. Not to mention you aren't really allowed to explore your sexuality until you've reached "that age". All discussion of this with responsible adults online is considered taboo (and for good reason!, but it's still unfortunate as I had little-to-no resources to help guide me through my feelings).
   </article>
   <article who="nahua" emotion="expressionless">
     This also ties in with another publicly taboo subject: porn, and an even more taboo one: the consumption of porn as a minor. This is still a touchy subject for me, and since this *is* a publicly accessible website, I also want to be vague for that reason too.
