--- a/tests/ooo.html
+++ b/tests/ooo.html
@@ -18,6 +18,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
+      height: 100%;
     }
     body {
       background-image: url("./../images/misc/o/o.png");
@@ -25,7 +26,6 @@
       background-size: 100px;
       background-position: center;
       background-blend-mode: soft-light;
-      margin-top: 30px;
       background-color: #38b97d;
       display: flex;
       flex-direction: column;
@@ -37,6 +37,8 @@
       text-align: center;
       margin: 0;
     }
+    h1 { padding-top: 30px; }
+    h4 { word-break: break-all; }
     button {
       background-color: #70e78c;
       border: solid black 2px;
@@ -47,7 +49,8 @@
     iframe {
       border-style: solid;
       width: 640px;
-      height: 480px;
+      height: 100%;
+      max-height: 480px;
       background-color: white;
     }
     #buttoncontainer {
@@ -58,6 +61,10 @@
     #notablescontainer {
       display: flex;
       flex-direction: row;
+      padding-bottom: 10px;
+    }
+    @media only screen and (max-width : 642px) {
+      iframe { width: calc(100vw - 4px); }
     }
   </style>
 </head>
